# Kandi

./: .gitignore  README.md
R/scripts/: esim3.R  esimerkki1.R  esimerkki2.R  vikaEsim.R  vikaEsim2.R
apl/: esim1.apl
cpp/helperfunctions/: CMakeLists.txt  DESCRIPTION  NAMESPACE
cpp/helperfunctions/R/: RcppExports.R
cpp/helperfunctions/man/: helperfunctions-package.Rd
cpp/helperfunctions/src/: RcppExports.cpp  gibbsEsim.cpp  helper.cpp
cpp/kandi_stuff/: CMakeLists.txt  DESCRIPTION  NAMESPACE
cpp/kandi_stuff/R/: RcppExports.R
cpp/kandi_stuff/man/: kandi_stuff-package.Rd
cpp/kandi_stuff/src/: RcppExports.cpp
latex/: esim.tex  johdanto.tex  kandi.tex  loppusanat.tex  mcmc.tex  mcmc2.tex  sources.bib  teoriaa.tex
